<resources>
    <string name="app_name">Remember Words</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="word_to_remember">Word to remember</string>
    <string name="word_translation">Translation</string>
    <string name="word_choose_image">Choose image</string>
    <string name="word_not_inputted">Word not inputted</string>
    <string name="translation_not_inputted">Translation not inputted</string>
    <string name="word_and_translation_not_inputted">Word and translation not inputted</string>
    <string name="start_menu_action_sort">Sort by</string>
    <string name="how_to_use">How to use</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="words_list">Words list</string>
    <string name="learn_now">Learn now</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_deleted">Word deleted</string>
    <string name="cancel_word_deletion">Undo</string>
    <string name="sort_custom">Custom</string>
    <string name="sort_by_creation_desc">Creation time</string>
    <string name="sort_alphabetically">Alphabetically</string>
    <string name="search_hint">Search words</string>
    <string name="time_to_repeat_words_title">Time to repeat words</string>
    <string name="check">Check</string>
    <string name="fab_speed_dial_menu_item_word">Word</string>
    <string name="fab_speed_dial_menu_item_words_group">Group of words</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="group_name">Group name</string>
    <string name="language">Language</string>
</resources>
