<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_words_list"
            android:icon="@drawable/ic_list_black_48dp"
            android:title="@string/words_list" />
        <item
            android:id="@+id/nav_learn_now"
            android:icon="@drawable/ic_school_black_48dp"
            android:title="@string/learn_now" />
        <item
            android:id="@+id/nav_how_to_use"
            android:icon="@drawable/ic_help_black_48dp"
            android:title="@string/how_to_use" />
        
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_48dp"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
